--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 wordpress-plugin/sftp-config.json
-site/power/db-config.php
-site/db-config.php
 site/sftp-config.json
-site/api/db-config.php
-site/engine/db-config.php
-site/stats/cache/db-config.php
-site/stats/number/db-config.php
-unused-archive/getter/get/db-config.php
-unused-archive/getter2.0/get/db-config.php
+db-config.php
