--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^7.1.1",
     "del": "^1.2.1",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "webpack": "^3.4.1"
   },
   "scripts": {},
