--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "del": "^1.2.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "run-sequence": "^2.2.1",
     "webpack": "^3.4.1"
   },
   "scripts": {},
