--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^7.1.1",
+    "body-parser": "^1.18.2",
     "del": "^1.2.1",
+    "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "run-sequence": "^2.2.1",
