--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "tid-parser",
   "version": "0.2.0",
   "description": "TID parser",
+  "scripts": {
+    "clean": "rimraf ./mean/client/modules/engine/build",
+    "build": "npm run clean && webpack --config ./mean/client/modules/engine/webpack.config.js",
+    "watch": "webpack --config ./mean/client/modules/engine/webpack.config.js --watch"
+  },
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^7.1.1",
     "body-parser": "^1.18.2",
-    "del": "^1.2.1",
+    "css-loader": "^0.28.10",
+    "expose-loader": "^0.7.5",
     "express": "^4.16.2",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "run-sequence": "^2.2.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.20.3",
     "webpack": "^3.4.1"
   },
-  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Crasher-ua/tid-parser.git"
