--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "del": "^1.2.1",
     "express": "^4.16.2",
@@ -13,6 +16,18 @@
     "gulp-concat": "^2.6.1",
     "run-sequence": "^2.2.1",
     "webpack": "^3.4.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   },
   "scripts": {},
   "repository": {
