--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "nodemon": "^1.17.1",
     "run-sequence": "^2.2.1",
     "webpack": "^3.4.1"
   },
