--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "jquery": "^3.3.1",
+    "jsdom": "^9.12.0",
     "nodemon": "^1.17.2",
     "run-sequence": "^2.2.1",
+    "sync-request": "^6.0.0",
     "webpack": "^3.11.0"
   },
   "babel": {
