--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -12,9 +13,12 @@
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "del": "^1.2.1",
+    "eslint-config-angular": "^0.2.0",
+    "eslint-plugin-angular": "^0.4.0",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^1.1.1",
     "jquery": "^3.3.1",
     "jsdom": "^9.12.0",
     "nodemon": "^1.17.2",
